--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,14 +1,19 @@
 
 /* General Styles */
-body {
+html, body {
+  display:contents;
   margin: 0;
+  min-height: 100vh;
+  min-width: 100vh;
   font-family: 'Roboto', sans-serif;
   background-color: #f0f4fa;
   color: #333;
   width: 100%;
   height: 100%;
 }
-
+body {
+  display: block;
+}
 /* styles.css */
 .full-width {
   width: 100%;
